--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,4 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/clion,c++
+/cmake-build-debug
